Updated the introduction class to agree with walkthrough, got rid of padding, added overflow. Realized that the nav bar was fixed and 100% wide. Updated this, fixed extra top of background showing.

--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,8 @@ div {
 /* Navigation Section */
 .top-navigation {
     background-color: #fff;
+    position: fixed;
+    width: 100%;
 }
 .top-navigation > .content {
 	height: 4.375rem;
@@ -61,9 +63,14 @@ div {
 .introduction {
 	background: url('../images/first-background.jpg') no-repeat 50% 50%;
 	background-size: cover;
-	padding: 12.5em 0;
+	overflow: auto;
 	text-align: center;
 	color: white;
+	height: 45.938rem;
+}
+
+.introduction .content {
+	margin-top: 13em;
 }
 
 .introduction .intro {
